iag/base/iag_pub_instance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iag-pub-instance
  labels:
    app: iag-pub-instance
spec:
  selector:
    matchLabels:
      app: iag-pub-instance
  replicas: 1
  template: 
    metadata:
      labels:
        app: iag-pub-instance
    spec:
      serviceAccountName: ibm-application-gateway
      volumes:
        - name: pub-iag-configmap
          configMap:
            name: pub-iag-configmap
        - name: iag-storage
          persistentVolumeClaim:
            claimName: iag-pvc # This should match the name of your PVC
      containers:
        - name: iag-instance
          image: icr.io/ibmappgateway/ibm-application-gateway:23.04.0
          volumeMounts:
            - name: pub-iag-configmap
              mountPath: /var/iag/config/
            - name: iag-storage
              mountPath: /var/iag/config/ # Path within the container where you want to mount the volume
          readinessProbe:
            exec:
              command:
              - /sbin/health_check.sh
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
              - /sbin/health_check.sh
            initialDelaySeconds: 120
            periodSeconds: 20
