iag/base/iag_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iag-pub-ingress
#  annotations:
#    networking.gke.io/v1beta1.FrontendConfig: "iag-frontend"
# spec:
#  rules:
#  - http:
#      paths:
#      - path: /*
#        pathType: ImplementationSpecific
#        backend:
#          service:
#            name: iag-pub-instance-service
#            port:
#              number: 443
