iag/base/iag_route.yaml
apiVersion: networking.k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: iag-external-route
spec:
  hostnames:
    - "*"
  rules:
    - matches:
        - path: /*
      backends:
        - service:
            name: iag-pub-instance-service
            port: 443
